syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
package ds_relation_datasource_user;

message DsRelationDatasourceUser {

     int32 id=1 ;
     int32 user_id=2 ;
     optional int32  datasource_id=3 ;
     optional int32 perm=4 ;
     optional string create_time= 5;
     optional string  update_time=6 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsRelationDatasourceUserService {
  rpc ListDsRelationDatasourceUsers(ListDsRelationDatasourceUsersRequest) returns (ListDsRelationDatasourceUsersResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsRelationDatasourceUsers"
    };
  }

  rpc GetDsRelationDatasourceUser(GetDsRelationDatasourceUserRequest) returns (DsRelationDatasourceUser) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsRelationDatasourceUsers/*}"
    };
  }

  rpc CreateDsRelationDatasourceUser(CreateDsRelationDatasourceUserRequest) returns (DsRelationDatasourceUser) {
    option (google.api.http) = {
      post: "/v1alpha1/DsRelationDatasourceUsers"
      body: "DsRelationDatasourceUser"
    };
  }

  rpc UpdateDsRelationDatasourceUser(UpdateDsRelationDatasourceUserRequest) returns (DsRelationDatasourceUser) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsRelationDatasourceUser.name=DsRelationDatasourceUsers/*}"
      body: "DsRelationDatasourceUser"
    };
  }

  rpc DeleteDsRelationDatasourceUser(DeleteDsRelationDatasourceUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsRelationDatasourceUsers/*}"
    };
  }
}

// message DsRelationDatasourceUser {
// ! This should be defined elsewhere
// }

message ListDsRelationDatasourceUsersRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsRelationDatasourceUsersResponse {
  // The field name should match the noun "DsRelationDatasourceUser" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsRelationDatasourceUser DsRelationDatasourceUsers = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsRelationDatasourceUserRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsRelationDatasourceUserRequest {
  // The parent resource name where the DsRelationDatasourceUser is to be created.
  string parent = 1;

  // The DsRelationDatasourceUser id to use for this DsRelationDatasourceUser.
  string DsRelationDatasourceUser_id = 2;

  // The DsRelationDatasourceUser resource to create.
  // The field name should match the Noun in the method name.
  DsRelationDatasourceUser DsRelationDatasourceUser = 3;
}

message UpdateDsRelationDatasourceUserRequest {
  // The DsRelationDatasourceUser resource which replaces the resource on the server.
  DsRelationDatasourceUser DsRelationDatasourceUser = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsRelationDatasourceUserRequest {
  // The resource name of the DsRelationDatasourceUser to be deleted.
  string name = 1;
}
